# CPP

./: .gitignore  README.md
Basic/: CMakeLists.txt
Basic/src/: app.cpp  app.hpp  main.cpp
Biblioteka/: CMakeLists.txt  README.md
Biblioteka/docs/: audit.md  user_guide.md
Biblioteka/include/: book.hpp  db.hpp  library.hpp
Biblioteka/include/audit/: audit_event.hpp  audit_repository.hpp  audit_service.hpp  sqlite_audit_repository.hpp
Biblioteka/include/books/: book.hpp  book_repository.hpp  book_service.hpp  sqlite_book_repository.hpp
Biblioteka/include/common/: system_id.hpp
Biblioteka/include/copies/: copy.hpp  copy_repository.hpp  copy_service.hpp  sqlite_copy_repository.hpp
Biblioteka/include/errors/: app_error.hpp  error_codes.hpp  error_logger.hpp  error_mapper.hpp
Biblioteka/include/exports/: export.hpp  export_repository.hpp  export_service.hpp  sqlite_export_repository.hpp
Biblioteka/include/imports/: csv_import_parser.hpp  import.hpp  import_parser.hpp  import_repository.hpp  import_service.hpp  sqlite_import_repository.hpp
Biblioteka/include/inventory/: inventory.hpp  inventory_repository.hpp  inventory_service.hpp  sqlite_inventory_repository.hpp
Biblioteka/include/locations/: location.hpp  location_repository.hpp  location_service.hpp  sqlite_location_repository.hpp
Biblioteka/include/notes/: note.hpp  note_repository.hpp  note_service.hpp  sqlite_note_repository.hpp
Biblioteka/include/readers/: reader.hpp  reader_repository.hpp  reader_service.hpp  sqlite_reader_repository.hpp
Biblioteka/include/reports/: report.hpp  report_repository.hpp  report_service.hpp  sqlite_report_repository.hpp
Biblioteka/include/reputation/: reputation.hpp  reputation_repository.hpp  reputation_service.hpp  sqlite_reputation_repository.hpp
Biblioteka/include/reservations/: reservation.hpp  reservation_repository.hpp  reservation_service.hpp  sqlite_reservation_repository.hpp
Biblioteka/include/search/: search.hpp  search_repository.hpp  search_service.hpp  sqlite_search_repository.hpp
Biblioteka/include/tui/: tui_application.hpp
Biblioteka/include/tui/controllers/: books_controller.hpp  dashboard_controller.hpp
Biblioteka/include/tui/screens/: books_screen.hpp  dashboard_screen.hpp  placeholder_screen.hpp  screen.hpp
Biblioteka/include/ui/: application.hpp  input_handler.hpp  renderer.hpp  screen_manager.hpp  style.hpp
Biblioteka/include/ui/components/: confirm_dialog.hpp  dialog.hpp  footer.hpp  form_field.hpp  header.hpp  list_view.hpp  menu.hpp  message_box.hpp  search_box.hpp  status_bar.hpp  table_view.hpp
Biblioteka/include/ui/controllers/: application_controller.hpp  audit_controller.hpp  books_controller.hpp  copies_controller.hpp  dashboard_controller.hpp  inventory_controller.hpp  loans_controller.hpp  locations_controller.hpp  notes_controller.hpp  readers_controller.hpp  reports_controller.hpp  reservations_controller.hpp
Biblioteka/include/ui/screens/: audit_log_screen.hpp  book_details_screen.hpp  book_form_screen.hpp  book_list_screen.hpp  copy_details_screen.hpp  copy_form_screen.hpp  copy_list_screen.hpp  copy_location_screen.hpp  copy_status_screen.hpp  dashboard_screen.hpp  inventory_list_screen.hpp  inventory_result_screen.hpp  inventory_session_screen.hpp  loan_create_screen.hpp  loan_details_screen.hpp  loan_extend_dialog_screen.hpp  loan_list_screen.hpp  loan_return_dialog_screen.hpp  location_details_screen.hpp  location_tree_screen.hpp  notes_screen.hpp  placeholder_screen.hpp  reader_block_dialog_screen.hpp  reader_details_screen.hpp  reader_form_screen.hpp  reader_list_screen.hpp  reader_loan_history_screen.hpp  reader_reputation_screen.hpp  reader_unblock_dialog_screen.hpp  report_menu_screen.hpp  report_result_screen.hpp  reservation_create_screen.hpp  reservation_details_screen.hpp  reservation_list_screen.hpp  screen.hpp
Biblioteka/src/: db.cpp  library.cpp  main.cpp
Biblioteka/src/audit/: audit_event.cpp  audit_service.cpp  sqlite_audit_repository.cpp
Biblioteka/src/books/: book_service.cpp  sqlite_book_repository.cpp
Biblioteka/src/common/: system_id.cpp
Biblioteka/src/copies/: copy.cpp  copy_service.cpp  sqlite_copy_repository.cpp
Biblioteka/src/errors/: error_logger.cpp  error_mapper.cpp
Biblioteka/src/exports/: export.cpp  export_service.cpp  sqlite_export_repository.cpp
Biblioteka/src/imports/: csv_import_parser.cpp  import.cpp  import_service.cpp  sqlite_import_repository.cpp
Biblioteka/src/inventory/: inventory.cpp  inventory_service.cpp  sqlite_inventory_repository.cpp
Biblioteka/src/locations/: location.cpp  location_service.cpp  sqlite_location_repository.cpp
Biblioteka/src/notes/: note.cpp  note_service.cpp  sqlite_note_repository.cpp
Biblioteka/src/readers/: reader.cpp  reader_service.cpp  sqlite_reader_repository.cpp
Biblioteka/src/reports/: report.cpp  report_service.cpp  sqlite_report_repository.cpp
Biblioteka/src/reputation/: reputation_service.cpp  sqlite_reputation_repository.cpp
Biblioteka/src/reservations/: reservation.cpp  reservation_service.cpp  sqlite_reservation_repository.cpp
Biblioteka/src/search/: search_service.cpp  sqlite_search_repository.cpp
Biblioteka/src/tui/: tui_application.cpp
Biblioteka/src/tui/controllers/: books_controller.cpp  dashboard_controller.cpp
Biblioteka/src/tui/screens/: books_screen.cpp  dashboard_screen.cpp  placeholder_screen.cpp
Biblioteka/src/ui/: application.cpp  input_handler.cpp  renderer.cpp  screen_manager.cpp  style.cpp
Biblioteka/src/ui/components/: confirm_dialog.cpp  dialog.cpp  footer.cpp  form_field.cpp  header.cpp  list_view.cpp  menu.cpp  message_box.cpp  search_box.cpp  status_bar.cpp  table_view.cpp
Biblioteka/src/ui/controllers/: application_controller.cpp  audit_controller.cpp  books_controller.cpp  copies_controller.cpp  dashboard_controller.cpp  inventory_controller.cpp  loans_controller.cpp  locations_controller.cpp  notes_controller.cpp  readers_controller.cpp  reports_controller.cpp  reservations_controller.cpp
Biblioteka/src/ui/screens/: audit_log_screen.cpp  book_details_screen.cpp  (+32 more)
